--- a/templates/new_template/english.html
+++ b/templates/new_template/english.html
@@ -171,8 +171,8 @@
     </style>
 {% endblock style %}
 {% block content %}
-<a href="/hutrit/list" class="back">
-    <img src="/static/images/back.svg" alt="volver">
+<a href="/" class="back">
+    <img src="static/images/back.svg" alt="volver">
     <span>Volver</span>
 </a>
 <div class="card">
@@ -220,9 +220,9 @@
 </div>
 {% endblock content %}
 {% block script %}
-<script src="/static/js/socket.io.js"></script>
-<script src="/static/js/socket.config.js"></script>
-<script src="/static/js/gptChatv0.0.1.js"></script>
+<script src="static/js/socket.io.js"></script>
+<script src="static/js/socket.config.js"></script>
+<script src="static/js/gptChatv0.0.1.js"></script>
 
 <script>
     
