--- a/templates/new_template/versiculo.html
+++ b/templates/new_template/versiculo.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guía Diaria del Versículo</title>
-    <link rel="stylesheet" href="/static/css/style.0.0.2.css">
+    <link rel="stylesheet" href="static/css/style.0.0.2.css">
 
-    <link rel="shortcut icon" href="/static/images/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="static/images/logo.svg" type="image/x-icon">
     <style>
         .btn {
             color: white
@@ -216,9 +216,9 @@
             </div>
         </section>
     </main>
-    <script src="/static/js/socket.io.js"></script>
-    <script src="/static/js/socket.config.js"></script>
-    <script src="/static/js/gptChatv0.0.1.js"></script>
+    <script src="static/js/socket.io.js"></script>
+    <script src="static/js/socket.config.js"></script>
+    <script src="static/js/gptChatv0.0.1.js"></script>
 
     <script>
         /** @type {number} */
