--- a/templates/new_template/burnout.html
+++ b/templates/new_template/burnout.html
@@ -154,8 +154,8 @@ Medidor de BurnOut
     </style>
 {% endblock style %}
 {% block content %}
-<a href="/hutrit/list" class="back">
-    <img src="/static/images/back.svg" alt="volver">
+<a href="/" class="back">
+    <img src="static/images/back.svg" alt="volver">
     <span>Volver</span>
 </a>
 <div class="card">
@@ -181,9 +181,9 @@ Medidor de BurnOut
 </div>
 {% endblock content %}
 {% block script %}
-<script src="/static/js/socket.io.js"></script>
-<script src="/static/js/socket.config.js"></script>
-<script src="/static/js/gptChatv0.0.1.js"></script>
+<script src="static/js/socket.io.js"></script>
+<script src="static/js/socket.config.js"></script>
+<script src="static/js/gptChatv0.0.1.js"></script>
 
 <script>
     
