--- a/templates/new_template/chat.html
+++ b/templates/new_template/chat.html
@@ -138,7 +138,7 @@
 {% endblock style %}
 {% block content %}
 <a href="/" class="back">
-    <img src="/static/images/back.svg" alt="volver">
+    <img src="static/images/back.svg" alt="volver">
     <span>Volver</span>
 </a>
 <div class="card">
@@ -166,9 +166,9 @@
 </div>
 {% endblock content %}
 {% block script %}
-<script src="/static/js/socket.io.js"></script>
-<script src="/static/js/socket.config.js"></script>
-<script src="/static/js/gptChatv0.0.1.js"></script>
+<script src="static/js/socket.io.js"></script>
+<script src="static/js/socket.config.js"></script>
+<script src="static/js/gptChatv0.0.1.js"></script>
 
 <script>
     socket.on('chatEnd', () => {
