--- a/templates/new_template/cybersecurity.html
+++ b/templates/new_template/cybersecurity.html
@@ -172,8 +172,8 @@ Ciberseguridad
 </style>
 {% endblock style %}
 {% block content %}
-<a href="/hutrit/list" class="back">
-    <img src="/static/images/back.svg" alt="volver">
+<a href="/" class="back">
+    <img src="static/images/back.svg" alt="volver">
     <span>Volver</span>
 </a>
 <div class="card">
@@ -200,9 +200,9 @@ Ciberseguridad
 </div>
 {% endblock content %}
 {% block script %}
-<script src="/static/js/socket.io.js"></script>
-<script src="/static/js/socket.config.js"></script>
-<script src="/static/js/gptChatv0.0.1.js"></script>
+<script src="static/js/socket.io.js"></script>
+<script src="static/js/socket.config.js"></script>
+<script src="static/js/gptChatv0.0.1.js"></script>
 
 <script>
     /** @type {number} */
