--- a/templates/new_template/hutrit_interview.html
+++ b/templates/new_template/hutrit_interview.html
@@ -138,8 +138,8 @@
 
 {% endblock style %}
 {% block content %}
-<a href="/hutrit/list" class="back">
-    <img src="/static/images/back.svg" alt="volver">
+<a href="/" class="back">
+    <img src="static/images/back.svg" alt="volver">
     <span>Volver</span>
 </a>
 <div class="card">
@@ -181,9 +181,9 @@
 </div>
 {% endblock content %}
 {% block script %}
-<script src="/static/js/socket.io.js"></script>
-<script src="/static/js/socket.config.js"></script>
-<script src="/static/js/gptChatv0.0.1.js"></script>
+<script src="static/js/socket.io.js"></script>
+<script src="static/js/socket.config.js"></script>
+<script src="static/js/gptChatv0.0.1.js"></script>
 
 <script>
     function init_interview(){
