--- a/templates/new_template/interview.html
+++ b/templates/new_template/interview.html
@@ -134,7 +134,7 @@
 {% endblock style %}
 {% block content %}
 <a href="/" class="back">
-    <img src="/static/images/back.svg" alt="volver">
+    <img src="static/images/back.svg" alt="volver">
     <span>Volver</span>
 </a>
 <div class="card">
@@ -176,9 +176,9 @@
 </div>
 {% endblock content %}
 {% block script %}
-<script src="/static/js/socket.io.js"></script>
-<script src="/static/js/socket.config.js"></script>
-<script src="/static/js/gptChatv0.0.1.js"></script>
+<script src="static/js/socket.io.js"></script>
+<script src="static/js/socket.config.js"></script>
+<script src="static/js/gptChatv0.0.1.js"></script>
 
 <script>
     function init_interview(){
